--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -39,14 +39,15 @@
                             <div class="col-md-3">{{page.selectedRows.length}} Rows Selected [<a href ng-click="page.clearSelected()">Clear</a>]</div>
                             <div class="col-md-9">
                                 <div class="pull-right" ng-show="page.boxOptions.selectedRowButtons.length>0">
-                                    <button type="button" ng-show="page.selectedRows.length==1 && page.pageinfo.buttons.edit.isvisible" class="btn btn-xs btn-primary"
+                                    <button type="button" ng-show="page.selectedRows.length==1 && page.pageinfo.buttons.edit.isvisible && page.boxOptions.selectedRowButtons.defaultButton" class="btn btn-xs btn-primary"
                                         ng-click="page.editRecord(page.selectedRows[0])"><i ng-class="button.icon"></i>Edit</button>
                                     <button type="button" ng-show="page.pageinfo.buttons.view.isvisible" class="btn btn-xs" ng-click="page.viewRecord(page.selectedRows[0])"><i ng-class="button.icon"></i>View</button>
                                     <button type="button" ng-show="page.pageinfo.buttons.update.isvisible" class="btn btn-xs" ng-click="page.updateRecord(page.selectedRows)"><i ng-class="button.icon"></i>Update</button>
-                                    <button type="button" ng-show="page.pageinfo.buttons.delete.isvisible" class="btn btn-xs btn-danger" ng-click="page.deleteRecord(page.selectedRows)"><i ng-class="button.icon"></i>Delete</button>
+                                    <button type="button" ng-show="page.pageinfo.buttons.delete.isvisible && page.boxOptions.selectedRowButtons.defaultButton" class="btn btn-xs btn-danger" ng-click="page.deleteRecord(page.selectedRows)"><i ng-class="button.icon"></i>Delete</button>
                                     <button ng-repeat="button in page.boxOptions.selectedRowButtons" type="button" class="btn btn-xs" ng-class="button.type"
                                         ng-click="button.onClick()"><i ng-class="button.icon"></i>{{button.text}}</button>
                                 </div>
+                               
                             </div>
                         </div>
                     </div>
@@ -62,7 +63,7 @@
                             class="djGrid">
                             <div class="no-data" ng-if="page.gridOptions.data.length==0 && !page.dataIsLoading">{{page.boxOptions.noResultMessageText}}</div>
                             <div class="no-data font-black" ng-if="page.dataIsLoading">
-                                    <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i> Please wait data is loading....
+                                <i class="fa fa-spinner fa-pulse fa-1x fa-fw"></i> Please wait data is loading....
                             </div>
                         </div>
                     </div>
