--- a/src/app/pages/organization/payRoll/salaryHead/organization.salaryHead.html
+++ b/src/app/pages/organization/payRoll/salaryHead/organization.salaryHead.html
@@ -170,6 +170,13 @@
                                 <span>{{page.pageinfo.fields.SHIsBenefit.text}}</span>
                             </label>
                         </div>
+                        <div class="col-md-3">
+                            <label class="radio-inline custom-radio nowrap">
+                                <input type="radio" name="headCategory" id="gros" ng-model="entity.headCat"  value="100" ng-change="changeHeadCat(entity.headCat)">
+                                <span>None</span>
+                            </label>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
