--- a/src/app/pages/payroll/masters/list/mastersList.html
+++ b/src/app/pages/payroll/masters/list/mastersList.html
@@ -97,15 +97,15 @@
 
                         <div class="form-group col-md-6">
                             <label class="radio-inline custom-radio nowrap font-bold">
-                                <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false;entity.LSCFixedDays=0" ng-model="entity.LSCTotalDayInCycle" value="true">
+                                <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false;entity.LSCFixedDays=0;salaryCalculatedOn(entity.salaryCalOn)" ng-model="entity.salaryCalOn" value="1" >
                             <span>{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</span>
                         </label>
                             <label class="radio-inline custom-radio nowrap font-bold">
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false;entity.LSCFixedDays=0" ng-model="entity.LSCTotalWorkingDay" value=" true ">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false;entity.LSCFixedDays=0;salaryCalculatedOn(entity.salaryCalOn)" ng-model="entity.salaryCalOn" value="2" >
                             <span>{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</span>
                         </label>
                             <label class="radio-inline custom-radio nowrap font-bold">
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true;entity.LSCFixedDays=0" ng-model="entity.LSCFixDay" value="true">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true;entity.LSCFixedDays=0;salaryCalculatedOn(entity.salaryCalOn)" ng-model="entity.salaryCalOn" value="3">
                             <span>{{page.pageinfo.fields.LSCFixDay.text}}</span>
                         </label>
                         </div>
@@ -172,15 +172,15 @@
 
                         <div class="form-group col-md-3">
                             <label for="inputPassword3" clas>{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalDayInCycle" value="true">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalDayInCycle">
                         </div>
                         <div class="form-group col-md-3">
                             <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalWorkingDay" value=" true ">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalWorkingDay">
                         </div>
                         <div class="form-group col-md-3">
                             <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true" ng-model="entity.LSCFixDay" value="true">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true" ng-model="entity.LSCFixDay">
                         </div>
                         <div class="form-group col-md-3" ng-show="fixedDays">
                             <label for="inputPassword3">{{page.pageinfo.fields.LSCFixedDays.text}}</label>
@@ -229,15 +229,15 @@
 
                         <div class="form-group col-md-3">
                             <label for="inputPassword3" clas>{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalDayInCycle" value="true">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalDayInCycle">
                         </div>
                         <div class="form-group col-md-3">
                             <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalWorkingDay" value=" true ">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalWorkingDay">
                         </div>
                         <div class="form-group col-md-3">
                             <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true" ng-model="entity.LSCFixDay" value="true">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true" ng-model="entity.LSCFixDay">
                         </div>
                         <div class="form-group col-md-3" ng-show="fixedDays">
                             <label for="inputPassword3">{{page.pageinfo.fields.LSCFixedDays.text}}</label>
@@ -279,15 +279,15 @@
 
                         <div class="form-group col-md-3">
                             <label for="inputPassword3" clas>{{page.pageinfo.fields.LSCTotalDayInCycle.text}}</label>
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalDayInCycle" value="true">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalDayInCycle">
                         </div>
                         <div class="form-group col-md-3">
                             <label for="inputPassword3">{{page.pageinfo.fields.LSCTotalWorkingDay.text}}</label>
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalWorkingDay" value=" true ">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=false" ng-model="entity.LSCTotalWorkingDay">
                         </div>
                         <div class="form-group col-md-3">
                             <label for="inputPassword3">{{page.pageinfo.fields.LSCFixDay.text}}</label>
-                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true" ng-model="entity.LSCFixDay" value="true">
+                            <input type="radio" name="commonRedioForCompOff" ng-click="fixedDays=true" ng-model="entity.LSCFixDay">
                         </div>
                         <div class="form-group col-md-3" ng-show="fixedDays">
                             <label for="inputPassword3">{{page.pageinfo.fields.LSCFixedDays.text}}</label>
