--- a/src/app/pages/attendance/masters/list/mastersList.html
+++ b/src/app/pages/attendance/masters/list/mastersList.html
@@ -71,7 +71,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div ui-grid="weekGridOptions" ui-grid-edit ui-grid-expandable ui-grid-auto-resize ui-grid-selection class="grid"></div>
+                        <div ui-grid="weekGridOptions" ui-grid-edit ui-grid-expandable ui-grid-auto-resize ui-grid-selection class="grid" style="height:270px"></div>
                     </div>
                 </div>
                 <div class="row">
