--- a/src/app/pages/payroll/empPayband/empPayband.html
+++ b/src/app/pages/payroll/empPayband/empPayband.html
@@ -3,7 +3,9 @@
 
     <div class="panel-heading">
         Employees Payband Entitilement
+
         <button ng-show="gridShow" ng-click="saveEmpPayband()" class="btn btn-xs btn-default pull-right">save</button>
+        <button ng-show="gridShow" ng-click="refreshEmpPayband()" class="btn btn-xs btn-default pull-right">Refresh</button>
     </div>
     <div class="panel-body">
         <div class="row">
