--- a/src/app/common/components/listReport/listReport.html
+++ b/src/app/common/components/listReport/listReport.html
@@ -34,7 +34,7 @@
 
 
                     <i id="progress-bar" class="fa fa-spinner fa-pulse fa-1x fa-fw"></i>
-                    
+                    grid come here
                 </div>
             </div>
         </div>
