--- a/src/app/pages/payroll/empPayband/empPayband.html
+++ b/src/app/pages/payroll/empPayband/empPayband.html
@@ -5,6 +5,7 @@
         Employees Payband Entitilement
 
         <button ng-show="gridShow" ng-click="saveEmpPayband()" class="btn btn-xs btn-default pull-right">save</button>
+        <!-- <button ng-show="gridShow" ng-click="uploadRecord()" class="btn btn-xs btn-default pull-right">Uploder</button> -->
         <button ng-show="gridShow" ng-click="refreshEmpPayband()" class="btn btn-xs btn-default pull-right">Refresh</button>
     </div>
     <div class="panel-body">
