--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -155,6 +155,12 @@
               <field-box page="page" ng-column="page.pageinfo.fields.JDIsHasLeft" ng-entity="empTabCtrl.entity" form="editForm" fb-change="onOTChange()"></field-box>
             </div>
           </div>
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.JDIsMarkAllDayPresent.text"></label>
+              <field-box page="page" ng-column="page.pageinfo.fields.JDIsMarkAllDayPresent" ng-entity="empTabCtrl.entity" form="editForm" fb-change="onOTChange()"></field-box>
+            </div>
+          </div>
 
         </div>
         <div class="row">
