--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -16,19 +16,22 @@
                             <div class="col-md-9">
                                 <div class="pull-right" ng-show="page.boxOptions.customButtons.length==0">
                                     <button ng-show="page.boxOptions.showBack" type="button" class="btn btn-xs btn-default" ng-click="page.goBack()"><i class="ion-backspace"></i>Back</button>
+                                    <button ng-show="page.boxOptions.showUpload" type="button" class="btn btn-xs btn-default" ng-click="page.uploadRecord()">
+                                            <i class="fa fa-plus-circle" aria-hidden="true"></i>Upload</button>
                                     <button ng-show="page.boxOptions.showRefresh" type="button" class="btn btn-xs btn-default" ng-click="page.refreshData()"><i 
                                 class="ion-refresh"></i>Refresh</button> &nbsp;
                                     <button ng-show="page.boxOptions.showAdd" type="button" class="btn btn-xs btn-default" ng-click="page.addRecord(editForm)">
-                                 <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>                                    &nbsp;
-                                    <button ng-show="page.boxOptions.showUpload" type="button" class="btn btn-xs btn-default" ng-click="page.uploadRecord()">
-                                        <i class="fa fa-plus-circle" aria-hidden="true"></i>Upload</button>                                    &nbsp;
+                                 <i class="fa fa-plus-circle" aria-hidden="true"></i>Add</button>                                    &nbsp; &nbsp;
 
                                     <select ng-show="page.boxOptions.showCustomView && (page.pageinfo.ucvlist.length>1)" title="Select Status" ng-model="selectedUcvItem"
                                         ng-options="opt.name for opt in page.pageinfo.ucvlist" ng-change="ucvOnChange(selectedUcvItem)">
                                 </select>
                                 </div>
-                                <div class="pull-right" ng-show="page.boxOptions.customButtons.length>0">
-                                    <button ng-repeat="button in page.boxOptions.customButtons" type="button" class="btn btn-xs" ng-class="button.type" ng-click="button.onClick()"><i ng-class="button.icon"></i>{{button.text}}</button>
+                                <div class="pull-right" ng-show="page.boxOptions.customButtons.length>0 || page.boxOptions.customButtonsWithDefault.length>0">
+                                    <button ng-if="page.boxOptions.customButtons.length>0" ng-repeat="button in page.boxOptions.customButtons" type="button"
+                                        class="btn btn-xs" ng-class="button.type" ng-click="button.onClick()"><i ng-class="button.icon"></i>{{button.text}}</button>                                    &nbsp;
+                                    <button ng-if="page.boxOptions.customButtonsWithDefault.length>0" ng-repeat="button in page.boxOptions.customButtonsWithDefault"
+                                        type="button" class="btn btn-xs" ng-class="button.type" ng-click="button.onClick()"><i ng-class="button.icon"></i>{{button.text}}</button>                                    &nbsp;
                                 </div>
                             </div>
                         </div>
@@ -39,15 +42,16 @@
                             <div class="col-md-3">{{page.selectedRows.length}} Rows Selected [<a href ng-click="page.clearSelected()">Clear</a>]</div>
                             <div class="col-md-9">
                                 <div class="pull-right" ng-show="page.boxOptions.selectedRowButtons.length>0">
-                                    <button type="button" ng-show="page.selectedRows.length==1 && page.pageinfo.buttons.edit.isvisible && page.boxOptions.selectedRowButtons.defaultButton" class="btn btn-xs btn-primary"
-                                        ng-click="page.editRecord(page.selectedRows[0])"><i ng-class="button.icon"></i>Edit</button>
+                                    <button type="button" ng-show="page.selectedRows.length==1 && page.pageinfo.buttons.edit.isvisible && page.boxOptions.selectedRowButtons.defaultButton"
+                                        class="btn btn-xs btn-primary" ng-click="page.editRecord(page.selectedRows[0])"><i ng-class="button.icon"></i>Edit</button>
                                     <button type="button" ng-show="page.pageinfo.buttons.view.isvisible" class="btn btn-xs" ng-click="page.viewRecord(page.selectedRows[0])"><i ng-class="button.icon"></i>View</button>
                                     <button type="button" ng-show="page.pageinfo.buttons.update.isvisible" class="btn btn-xs" ng-click="page.updateRecord(page.selectedRows)"><i ng-class="button.icon"></i>Update</button>
-                                    <button type="button" ng-show="page.pageinfo.buttons.delete.isvisible && page.boxOptions.selectedRowButtons.defaultButton" class="btn btn-xs btn-danger" ng-click="page.deleteRecord(page.selectedRows)"><i ng-class="button.icon"></i>Delete</button>
+                                    <button type="button" ng-show="page.pageinfo.buttons.delete.isvisible && page.boxOptions.selectedRowButtons.defaultButton"
+                                        class="btn btn-xs btn-danger" ng-click="page.deleteRecord(page.selectedRows)"><i ng-class="button.icon"></i>Delete</button>
                                     <button ng-repeat="button in page.boxOptions.selectedRowButtons" type="button" class="btn btn-xs" ng-class="button.type"
                                         ng-click="button.onClick()"><i ng-class="button.icon"></i>{{button.text}}</button>
                                 </div>
-                               
+
                             </div>
                         </div>
                     </div>
