--- a/src/app/pages/organization/employees/templates/job/job-view.html
+++ b/src/app/pages/organization/employees/templates/job/job-view.html
@@ -31,7 +31,7 @@
           <div class="col-sm-4">
             <div class="form-group">
               <label ng-bind="page.pageinfo.fields.JDDate.text"></label>
-              <field-box page="page" ng-column="page.pageinfo.fields.JDDate" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+              <field-box page="page" ng-column="page.pageinfo.fields.JDDate" ng-entity="empTabCtrl.entity" form="editForm" fb-change="setProbetionDateOnJoininDate()"></field-box>
 
             </div>
           </div>
@@ -155,12 +155,13 @@
               <field-box page="page" ng-column="page.pageinfo.fields.JDIsHasLeft" ng-entity="empTabCtrl.entity" form="editForm" fb-change="onOTChange()"></field-box>
             </div>
           </div>
-          <div class="col-sm-4">
+          <div class="col-sm-4" ng-if="empTabCtrl.entity.JDIsHasLeft">
             <div class="form-group">
-              <label ng-bind="page.pageinfo.fields.JDIsMarkAllDayPresent.text"></label>
-              <field-box page="page" ng-column="page.pageinfo.fields.JDIsMarkAllDayPresent" ng-entity="empTabCtrl.entity" form="editForm" fb-change="onOTChange()"></field-box>
+              <label ng-bind="page.pageinfo.fields.JDHasLeftDate.text"></label>
+              <field-box page="page" ng-column="page.pageinfo.fields.JDHasLeftDate" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
             </div>
           </div>
+
 
         </div>
         <div class="row">
@@ -194,6 +195,38 @@
           </div>
         </div>
 
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.JDIsProbation.text"></label>
+              <field-box page="page" ng-column="page.pageinfo.fields.JDIsProbation" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+            </div>
+          </div>
+          <div class="col-sm-4" ng-if="empTabCtrl.entity.JDIsProbation">
+            <div class="form-group">
+              <label for="inputEmployeeType">Probation(In Days)</label>
+              <input maxlength="3" numeric-only ng-model="empTabCtrl.entity.JDNumberOfProbationInDays" ng-change="setProbetionDate()" type="text"
+                class="form-control" />
+            </div>
+          </div>
+          <div class="col-sm-4" ng-if="empTabCtrl.entity.JDNumberOfProbationInDays && empTabCtrl.entity.JDIsProbation">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.JDProbationValidity.text"></label>
+              <field-box page="page" ng-column="page.pageinfo.fields.JDProbationValidity" ng-entity="empTabCtrl.entity" form="editForm"></field-box>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-sm-4">
+            <div class="form-group">
+              <label ng-bind="page.pageinfo.fields.JDIsMarkAllDayPresent.text"></label>
+              <field-box page="page" ng-column="page.pageinfo.fields.JDIsMarkAllDayPresent" ng-entity="empTabCtrl.entity" form="editForm"
+                fb-change="onOTChange()"></field-box>
+            </div>
+          </div>
+        </div>
+
         <div ng-show="empTabCtrl.entity.JDEmploymentId=='3'">
           <hr>
           <div class="row">
@@ -216,7 +249,9 @@
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                <label for="inputEmployeeType">Vendor</label>
+                <!--<label for="inputEmployeeType">Vendor</label>-->
+                <label ng-bind="page.pageinfo.fields.JDVenderName.text"></label>
+                <input ng-model="empTabCtrl.entity.JDVenderName" type="text" class="form-control" />
                 <!--this to be uncommented after adding column in JobDescription:JD-->
                 <!--<select id="empLevel_{{$index}}" name="empLevel_{{$index}}" ng-model="empTabCtrl.entity.EmpLevelName" class="form-control"
                   ng-options="level.name as level.name for level in empTabCtrl.vendor" ng-change="vm.typeOnChange(vm.section.SecType,'Add')"
