--- a/src/app/pages/organization/employees/templates/user/user-view.html
+++ b/src/app/pages/organization/employees/templates/user/user-view.html
@@ -6,7 +6,10 @@
             <div style="min-height: 450px;" ng-show="page.pageIsLoaded">
                 <div class="row">
                     <div class="col-sm-4">
-                        <span class="form-control" ng-bind="empTabCtrl.entity.EmpName"></span>
+                        <div class="form-group">
+                            <label ng-bind="page.pageinfo.fields.EmpName.text"></label>
+                            <span class="form-control" ng-bind="empTabCtrl.entity.EmpName"></span>
+                        </div>
                     </div>
                 </div>
 
